add grunt to minify js

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
 		.u-placeholder{color: #aaa;}
 	</style>
 	<script src="../bower_components/angular/angular.js"></script>
-	<script src="../src/placeholder.js"></script>
+	<script src="../src/angular-ui-placeholder.js"></script>
 </head>
 <body ng-controller="demoCtrl">
 	<form>
