update module name from zjuwwq.placeholder to zjuwwq.ui.placeholder

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,7 @@
 		<div>{{userName}}</div>
 	</form>
 	<script>
-		angular.module('demoApp', ['zjuwwq.placeholder'])
+		angular.module('demoApp', ['zjuwwq.ui.placeholder'])
 		.controller('demoCtrl', function($scope){
 
 		});
